1.6.6:

    - Django test for pushsend management command.

1.6.5:

    - Tests for push views.

1.6.4:

    - Moving pid locks (so we can have only 1 copy of management command running) from files to DB because commonstuff changed.

1.6.3:

    - Completely reseted app migrations before publishing app.

1.6.2:

    - В модели и коде push переименовал свой выдуманный ext_id на общеупотребимый термин endpoint.
    - Выпилил код связанный с хранением old_ext_id для push, т.к. он запутанный, переусложненный и ненужный.

1.6.1:

    - i18n приложения. По умолчанию английский и добавлен русский перевод.
    - Удалил консольную комманду pushfill (точнее переместил в другое приложение), тк она не универсальна.

1.6:

    - Переход на Python 3.
    - Починил JS-код сохранения на сервере отключенной пользователем подписки, который был поломан в ходе рефакторинга промисов в JS.
    - service-worker.js теперь отдается динамически, не нужно копировать его ручками в папку www каждого проекта.

1.5.6:

    - JS-код переписан, чтобы быть понятнее.
    - Учет закрытия нотификации пользователем в статистике.

1.5.5:

    - Большие картинки в пушах для Chrome.
    - Новые настройки для этих картинок.
    - Обновлена обязательная версия pywebpush в зависимостях, т.к. раньше, оказывается, в ней не работали пуши без payload.

1.5.4:

    - Проверка, что тип и расширение картинки совпадают, чтобы не залили png-картинку, как .jpg например.

1.5.3:

    - Возможность массового включения/выключения заданий пуш-рассылки в админке.
    - Консольная команда для создания заданий рассылки из активных статей, которые еще не пушились.

1.5.2:

    - Необязательные настройки theme_color и background_color для web-app, которое объявляется в /push/manifest.json.
    - Автоматическое определение размера указанных иконок для PWA.
    - Удалены настройки DJANGO_PUSH_APP_ICON_W, DJANGO_PUSH_APP_ICON_H.
    - DJANGO_PUSH_APP_ICON_URL переименована в DJANGO_PUSH_APP_ICON_URLS.

1.5.1:
    