@@ -19,7 +19,6 @@ those who need the ability to send individual pushes to each subscriber.
 
 **Known limitations are:**
 
-* django_infopush works on Python 3 only (2.7 support will be added).
 * Tested only on Django 1.11 LTS.
 * Like any webpush app it requires you website to work on SSL (httpS://).
 * You better have access to CRON on your server, because push tasks are send using `python manage.py pushsend` management command. And running it manually every time sounds like a bad idea. Although for testing purposes manual calls will do well.
