@@ -1,4 +1,6 @@
 # -*- coding: utf-8 -*-
+from __future__ import unicode_literals, absolute_import, division, print_function
+
 from django.utils.translation import ugettext as _
 
 from commonstuff.filters import MyNullNotNullFilter
