@@ -1,4 +1,5 @@
 # -*- coding: utf-8 -*-
+from __future__ import unicode_literals, absolute_import, division, print_function
 
 from django.conf.urls import url
 from . import views
